# polyhedral-template-matching

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  conanfile.py  plugin.json  vpm.json
.github/workflows/: publish-plugin-binary.yml
dependencies/ptm/: ptm_structure_matcher.cpp  ptm_structure_matcher.h
include/volt/analysis/: ptm.h  ptm_crystal_info_provider.h  ptm_local_atom_state.h  ptm_service.h  ptm_structure_analysis.h
include/volt/analysis/internal/: ptm_structure_analysis_detail.h
include/volt/cluster-rules/: orientation_based.h
include/volt/matcher/: template_crystal_info_provider.h  template_matcher.h
scripts/: ptm_plugin_wrapper.py
src/: main.cpp  plugin.cpp
src/analysis/: ptm.cpp  ptm_crystal_info_provider.cpp  ptm_service.cpp  ptm_structure_analysis.cpp
src/cluster-rules/: orientation_based.cpp
src/matcher/: template_crystal_info_provider.cpp  template_matcher.cpp
